--- a/UE_IRP_Project/Shopping_District/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE_IRP_Project/Shopping_District/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -210,6 +210,7 @@ LastLevel=/Game/Unoptimised_Shopping
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/Unoptimised/Materials/Material__380.Material__380
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1478,7 +1479,8 @@ Light="\"Object.Light.DirectionalLightComponent.Object.LightShafts.LightShaftOve
 MRUItem0=/Game/Unoptimised_Shopping
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unoptimised_Shopping
+MRUItem0=/Game/Unoptimised/Materials/Material__380
+MRUItem1=/Game/Unoptimised_Shopping
 
 [DetailCategoriesAdvanced]
 DirectionalLightComponent.AtmosphereAndCloud=True
