--- a/UE_IRP_Project/Shopping_District/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE_IRP_Project/Shopping_District/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -213,6 +213,8 @@ LastLevel=/Game/Optimised_Shopping
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -241,8 +243,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=
-RecentAssetEditors=MaterialEditor
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1591,6 +1591,24 @@ SkeletalMeshComponent.Tags=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 MaterialExpressionReroute.MaterialExpression=True
+Actor.HLOD=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMesh.Deformer=True
+SkeletalMesh.Rendering=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1598,42 +1616,45 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.LightShafts.LightShaftOverrideDirection\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
 Light="\"Object.Light.DirectionalLightComponent.Object.LightShafts.LightShaftOverrideDirection\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[26]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[26]\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[26]\" "
 
 [MRU]
 MRUItem0=/Game/Optimised_Shopping
 MRUItem1=/Game/Unoptimised_Shopping
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Optimised/Materials/Material__401
-MRUItem1=/Game/Optimised/Materials/Material__389
-MRUItem2=/Game/Optimised/Materials/Material__381
-MRUItem3=/Game/Optimised/Materials/Material__380
-MRUItem4=/Game/Optimised/Materials/Material__589
-MRUItem5=/Game/Optimised/Materials/Material__588
-MRUItem6=/Game/Optimised/Materials/Material__587
-MRUItem7=/Game/Optimised/Materials/Material__586
-MRUItem8=/Game/Optimised/Materials/Material__585
-MRUItem9=/Game/Optimised/Materials/Material__584
-MRUItem10=/Game/Optimised/Materials/Material__583
-MRUItem11=/Game/Optimised/Materials/Material__582
-MRUItem12=/Game/Optimised/Materials/Material__581
-MRUItem13=/Game/Optimised/Materials/Material__579
-MRUItem14=/Game/Optimised/Materials/Material__578
-MRUItem15=/Game/Optimised/Materials/Material__580
-MRUItem16=/Game/Optimised/Materials/Material__577
-MRUItem17=/Game/Optimised_Shopping
-MRUItem18=/Game/Optimised/Materials/Material__575
-MRUItem19=/Game/Optimised/Materials/Material__574
-MRUItem20=/Game/Optimised/Materials/Material__573
-MRUItem21=/Game/Optimised/Materials/Material__572
-MRUItem22=/Game/Optimised/Materials/Material__571
-MRUItem23=/Game/Optimised/Materials/Material__570
-MRUItem24=/Game/Optimised/Materials/Material__569
-MRUItem25=/Game/Optimised/Materials/Material__566
-MRUItem26=/Game/Optimised/Materials/Material__565
-MRUItem27=/Game/Unoptimised/UnionStreet__UnOp__Bars_low
-MRUItem28=/Game/Unoptimised_Shopping
-MRUItem29=/Game/Unoptimised/Materials/Material__405
+MRUItem0=/Game/StaticMesh
+MRUItem1=/Game/Optimised/UnionStreet__Op_
+MRUItem2=/Game/Optimised/Materials/Material__401
+MRUItem3=/Game/Optimised/Materials/Material__389
+MRUItem4=/Game/Optimised/Materials/Material__381
+MRUItem5=/Game/Optimised/Materials/Material__380
+MRUItem6=/Game/Optimised/Materials/Material__589
+MRUItem7=/Game/Optimised/Materials/Material__588
+MRUItem8=/Game/Optimised/Materials/Material__587
+MRUItem9=/Game/Optimised/Materials/Material__586
+MRUItem10=/Game/Optimised/Materials/Material__585
+MRUItem11=/Game/Optimised/Materials/Material__584
+MRUItem12=/Game/Optimised/Materials/Material__583
+MRUItem13=/Game/Optimised/Materials/Material__582
+MRUItem14=/Game/Optimised/Materials/Material__581
+MRUItem15=/Game/Optimised/Materials/Material__579
+MRUItem16=/Game/Optimised/Materials/Material__578
+MRUItem17=/Game/Optimised/Materials/Material__580
+MRUItem18=/Game/Optimised/Materials/Material__577
+MRUItem19=/Game/Optimised_Shopping
+MRUItem20=/Game/Optimised/Materials/Material__575
+MRUItem21=/Game/Optimised/Materials/Material__574
+MRUItem22=/Game/Optimised/Materials/Material__573
+MRUItem23=/Game/Optimised/Materials/Material__572
+MRUItem24=/Game/Optimised/Materials/Material__571
+MRUItem25=/Game/Optimised/Materials/Material__570
+MRUItem26=/Game/Optimised/Materials/Material__569
+MRUItem27=/Game/Optimised/Materials/Material__566
+MRUItem28=/Game/Optimised/Materials/Material__565
+MRUItem29=/Game/Unoptimised/UnionStreet__UnOp__Bars_low
 
 [DetailCategoriesAdvanced]
 DirectionalLightComponent.AtmosphereAndCloud=True
@@ -1648,6 +1669,7 @@ SkyLight.Light=True
 PreserveScaleRatio=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/StaticMesh.StaticMesh;
 RecentlyPlaced=/Game/Fab/Megascans/Decals/Concrete_Patch_seymu2i/Medium/MI_seymu2i.MI_seymu2i;
 RecentlyPlaced=/Game/Fab/Megascans/Decals/Concrete_Damage_tdhmahbb/Medium/MI_tdhmahbb.MI_tdhmahbb;
 RecentlyPlaced=/Game/Fab/Megascans/Decals/Concrete_Patch_vgzjdjbg/Medium/MI_vgzjdjbg.MI_vgzjdjbg;
@@ -1667,7 +1689,6 @@ RecentlyPlaced=/Game/Unoptimised/UnionStreet__UnOp__DutchBrick_low.UnionStreet__
 RecentlyPlaced=/Game/Unoptimised/UnionStreet__UnOp__DrainPipeHorizontal_low.UnionStreet__UnOp__DrainPipeHorizontal_low;
 RecentlyPlaced=/Game/Unoptimised/UnionStreet__UnOp__DrainPipeGrip_low.UnionStreet__UnOp__DrainPipeGrip_low;
 RecentlyPlaced=/Game/Unoptimised/UnionStreet__UnOp__DrainPipeCorner_low.UnionStreet__UnOp__DrainPipeCorner_low;
-RecentlyPlaced=/Game/Unoptimised/UnionStreet__UnOp__DrainPipeCanopy_low.UnionStreet__UnOp__DrainPipeCanopy_low;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1844,6 +1865,8 @@ LastLogListing=FBXImport
 /Game/Optimised/Materials/Material__381.Material__381=1
 /Game/Optimised/Materials/Material__389.Material__389=1
 /Game/Optimised/Materials/Material__401.Material__401=1
+/Game/Optimised/UnionStreet__Op_.UnionStreet__Op_=1
+/Game/StaticMesh.StaticMesh=1
 
 [MaterialEditor]
 PrimType=1
@@ -2040,4 +2063,50 @@ InstalledPlugins=WMFCodecs
 
 [/Script/Fab.FabLocalAssets]
 PathsListingID=(("/Game/Fab/Megascans/Decals/Road_Line_rjfjqvp", "6f863bbf-3d9d-414d-83ba-0c37ea3676b5"),("/Game/Fab/Megascans/Decals/Round_Drain_Cover_sdus0qk", "16f36535-a188-4989-8d1c-5bb790290378"),("/Game/Fab/Megascans/Decals/Square_Rusty_Drain_sdutrnk", "2ae59500-f274-4ca6-9684-692a6957af53"),("/Game/Fab/Megascans/Decals/Asphalt_Patch_ulghbflg", "c741e8f8-e0d9-4d7f-99d7-0306155223fb"),("/Game/Fab/Megascans/Decals/Painted_Arrow_Line_thzndcrs", "6ae2ed59-fbdd-41b2-b07d-bcd40d1f6b2f"),("/Game/Fab/Megascans/Decals/Concrete_Patch_vgzjdjbg", "46b6dfbf-0cdf-4c9a-9a91-9273b6c1214f"),("/Game/Fab/Megascans/Decals/Concrete_Damage_tdhmahbb", "99088278-a356-4263-90dc-366cd98871d0"),("/Game/Fab/Megascans/Decals/Concrete_Patch_seymu2i", "6856b24c-a359-4898-ac48-a359b58bca58"))
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
 
